# paper-age-gui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  index.html  rust-toolchain.toml
.github/workflows/: main.yml
src/: main.rs
