[package]
name = "paper-age-gui"
description = "A tool to search files"
version = "0.2.0"
edition = "2024"
authors = ["Ivan Smoliakov <self@renesat.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/renesat/paper-age-gui"
repository = "https://github.com/renesat/paper-age-gui"
keywords = ["gui", "secret", "age-encryption"]
categories = ["cryptography", "gui"]

[dependencies]
paper-age = "1.4.0"
age = "0.11.1"
anyhow = "1.0.95"
iced = { version = "0.14", features = [
  "svg",
  "advanced",
  "image",
  "debug",
  "tokio",
] }
embed_it = "7.0.0"
rfd = { version = "0.17" }
arcstr = "1.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.14", features = [
  "svg",
  "advanced",
  "image",
  "debug",
  "tokio",
  "webgl",
  "fira-sans",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
